--- a/house/templates/house/index.html
+++ b/house/templates/house/index.html
@@ -14,6 +14,7 @@
             console.log($("#light_1"))
             $("#light_1").css("opacity", light_opp);
         });
+        var csrfToken = '{{ csrf_token }}'
     </script>
 </head>
 <body>
